--- a/D1_autumn/Tutorial1_SVC/demo_blank.ipynb
+++ b/D1_autumn/Tutorial1_SVC/demo_blank.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "83abb0ba",
+   "id": "2cee5b3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41898fdf",
+   "id": "a5bb267e",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f910becf",
+   "id": "c59ca20d",
    "metadata": {},
    "source": [
     "# Logistic Regression\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76532e2c",
+   "id": "9480c701",
    "metadata": {},
    "source": [
     "## Data Preparation (Visualization)\n",
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3fe3dc9a",
+   "id": "63147edb",
    "metadata": {},
    "outputs": [
     {
@@ -411,10 +411,9 @@
     }
    ],
    "source": [
-    "data = load_breast_cancer()\n",
-    "X = data.data\n",
-    "y = data.target\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, shuffle=True)\n",
+    "# ------ Put code here -------- #\n",
+    "\n",
+    "# ----------------------------- #\n",
     "\n",
     "print(f\"# of training data : {len(y_train)}\")\n",
     "print(f\"# of test data     : {len(y_test)}\")\n",
@@ -425,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beb81f42",
+   "id": "ff3850f5",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -451,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cf30c779",
+   "id": "f2e24b81",
    "metadata": {},
    "outputs": [
     {
@@ -470,17 +469,17 @@
     "\n",
     "# ----------------------------- #\n",
     "\n",
-    "clf = LogisticRegression(penalty=penalty, C=C)\n",
-    "clf.fit(X_train, y_train);\n",
+    "# ------ Put code here -------- #\n",
     "\n",
-    "y_train_pred = clf.predict_proba(X_train) # We can use \"clf.predict()\" to directly get the prediction.\n",
-    "y_train_pred = np.argmax(y_train_pred, axis=1)\n",
+    "\n",
+    "# ----------------------------- #\n",
+    "\n",
     "print(f\"Train Accuracy : {clf.score(X_train, y_train)}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a08aec6a",
+   "id": "4a2f18fc",
    "metadata": {},
    "source": [
     "## Evaluation\n",
@@ -493,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b4e7aa95",
+   "id": "99a6961d",
    "metadata": {},
    "outputs": [
     {
@@ -505,14 +504,16 @@
     }
    ],
    "source": [
-    "y_test_pred = clf.predict_proba(X_test) # We can use \"clf.predict()\" to directly get the prediction.\n",
-    "y_test_pred = np.argmax(y_test_pred, axis=1)\n",
+    "# ------ Put code here -------- #\n",
+    "\n",
+    "\n",
+    "# ----------------------------- #\n",
     "print(f\"Test  Accuracy : {clf.score(X_test, y_test)}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a332cdb6",
+   "id": "edfa5f74",
    "metadata": {},
    "source": [
     "---\n",
@@ -524,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef0c0b33",
+   "id": "1a0f628c",
    "metadata": {},
    "source": [
     "# Support Vector Classification\n",
@@ -551,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb3b6226",
+   "id": "bbc03a1c",
    "metadata": {},
    "source": [
     "## Data Preparation\n",
@@ -568,20 +569,21 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1897167b",
+   "id": "fa4e65dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "mnist = fetch_openml(\"mnist_784\", data_home=\"mnist/\")\n",
     "data_num = 1000\n",
     "X = mnist.data.values[:data_num]/255\n",
-    "y = np.array(mnist.target.values[:data_num], dtype=np.int)"
+    "y = np.array(mnist.target.values[:data_num], dtype=np.int)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2deddfe6",
+   "id": "c08fec89",
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bb2e341",
+   "id": "fe365f0e",
    "metadata": {},
    "source": [
     "## Data Visualization\n",
@@ -619,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d3c801e7",
+   "id": "66984a70",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "425fb02b",
+   "id": "df54ebcc",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -685,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "434f482a",
+   "id": "787876ed",
    "metadata": {},
    "outputs": [
     {
@@ -705,19 +707,18 @@
     "\n",
     "# -----------------------------\n",
     "\n",
-    "clf = SVC(C=C, kernel=kernel)\n",
-    "clf.fit(X_train, y_train)\n",
+    "# ------ Put code here -------- #\n",
     "\n",
-    "y_train_pred = clf.predict(X_train)\n",
+    "\n",
+    "# ----------------------------- #\n",
+    "\n",
     "print(f\"Train Accuracy : {clf.score(X_train, y_train)}\")\n",
-    "\n",
-    "y_test_pred = clf.predict(X_test)\n",
     "print(f\"Test  Accuracy : {clf.score(X_test, y_test)}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "065c78ef",
+   "id": "f1696ff6",
    "metadata": {},
    "source": [
     "### Radial Basis Function (RBF)\n",
@@ -736,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "9d5a66b8",
+   "id": "c7689f97",
    "metadata": {},
    "outputs": [
     {
@@ -757,19 +758,18 @@
     "\n",
     "# -----------------------------\n",
     "\n",
-    "clf = SVC(C=C, kernel=kernel, gamma=gamma)\n",
-    "clf.fit(X_train, y_train)\n",
+    "# ------ Put code here -------- #\n",
     "\n",
-    "y_train_pred = clf.predict(X_train)\n",
+    "\n",
+    "# ----------------------------- #\n",
+    "\n",
     "print(f\"Train Accuracy : {clf.score(X_train, y_train)}\")\n",
-    "\n",
-    "y_test_pred = clf.predict(X_test)\n",
     "print(f\"Test  Accuracy : {clf.score(X_test, y_test)}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "201a09bd",
+   "id": "9f43e972",
    "metadata": {},
    "source": [
     "### Hyper-Parameters Tuning for RBF\n",
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "68b206de",
+   "id": "2c338c98",
    "metadata": {},
    "outputs": [
     {
@@ -812,14 +812,11 @@
     }
    ],
    "source": [
-    "svc = SVC(kernel=\"rbf\", random_state=42)\n",
-    "distributions = dict(\n",
-    "    C=loguniform(1e-2, 1e2),\n",
-    "    gamma=loguniform(1e-4, 1)\n",
-    ")\n",
-    "clf = RandomizedSearchCV(svc, distributions, random_state=42, n_iter=10, cv=3, n_jobs=-1)\n",
-    "search = clf.fit(X_train, y_train)\n",
-    "best_params = search.best_params_\n",
+    "# ------ Put code here -------- #\n",
+    "\n",
+    "\n",
+    "# ----------------------------- #\n",
+    "\n",
     "print(\"Best Parameters:\")\n",
     "for key in best_params:\n",
     "    print(f\"    {key}: {best_params[key]}\")"
@@ -828,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7339da37",
+   "id": "087ce82e",
    "metadata": {},
    "outputs": [
     {
@@ -841,19 +838,18 @@
     }
    ],
    "source": [
-    "clf = SVC(C=best_params[\"C\"], kernel=\"rbf\", gamma=best_params[\"gamma\"])\n",
-    "clf.fit(X_train, y_train)\n",
+    "# ------ Put code here -------- #\n",
     "\n",
-    "y_train_pred = clf.predict(X_train)\n",
+    "\n",
+    "# ----------------------------- #\n",
+    "\n",
     "print(f\"Train Accuracy : {clf.score(X_train, y_train)}\")\n",
-    "\n",
-    "y_test_pred = clf.predict(X_test)\n",
     "print(f\"Test  Accuracy : {clf.score(X_test, y_test)}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "995f53fa",
+   "id": "bfeaa228",
    "metadata": {},
    "source": [
     "## Evaluation\n",
@@ -873,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "403548f6",
+   "id": "8191e11e",
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +892,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3a51d8f",
+   "id": "b9f60be1",
    "metadata": {},
    "source": [
     "### Samples of Correct Prediction\n",
@@ -909,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c05d60c0",
+   "id": "b20b4365",
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +945,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "588e4c92",
+   "id": "b636bacd",
    "metadata": {},
    "source": [
     "### Samples of Wrong Prediction\n",
@@ -962,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7920b4cc",
+   "id": "65caaee1",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a07849a",
+   "id": "63381011",
    "metadata": {},
    "source": [
     "# Appendix\n",
@@ -1019,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "0093887a",
+   "id": "a316988e",
    "metadata": {},
    "outputs": [
     {
